src/objects/Project_Target__c.object
<CustomObject>
    <description>Used for internal CRM projects to define the project targets</description>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <inlineHelpText>Add the date where you will follow up and measure the KPI</inlineHelpText>
        <label>Follow-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method_for_measure__c</fullName>
        <inlineHelpText>Add how you will measure your KPI</inlineHelpText>
        <label>Method for measure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Targets</relationshipLabel>
        <relationshipName>Project_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Description__c</fullName>
        <label>Target Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_KPI__c</fullName>
        <inlineHelpText>Add the KPI for the target - must be measurable</inlineHelpText>
        <label>Target KPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_reach__c</fullName>
        <label>Target reach (%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Target</label>
    <nameField>
        <label>Project Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>